more info on ddclient

--- a/noipdocker/ddclient.conf
+++ b/noipdocker/ddclient.conf
@@ -2,10 +2,10 @@
 #
 # /etc/ddclient.conf
 
-protocol=xxxxxx
-use=web, web=dynamicdns.xxx
-server=xxxx.com
-login=xxxxx
-password='xxxxx'
-host
+protocol=dyndns2
+use=web, web=checkip.dyndns.com/, web-skip='IP Address'
+server=dynupdate.no-ip.com
+login=user@email.com
+password='passw0rd'
+host.ddns.net
 
